Add material 3 color theme.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<ave-encapsulation-emulated />
-<ave-encapsulation-shadow-dom />
-<ave-encapsulation-none />
+<main>
+  <ave-header />
+  <ave-encapsulation-emulated />
+  <ave-encapsulation-shadow-dom />
+  <ave-encapsulation-none />
+</main>
 
 <router-outlet />
